# colony-npapi

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  Common.am  Makefile-gen  Makefile.am  README.md  autogen.sh  configure.ac  pytest.ini  readme.md  setup.py
.github/workflows/: deploy.yml  main.yml
darwin/xcode4/colony_npapi.xcodeproj/: project.pbxproj
darwin/xcode4/colony_npapi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/: test.html
examples/js/: data.js  main.js
examples/python/: devices.py  hello.py  hello_pdf.py
examples/web/: test.html
examples/web/js/: main.js
m4/: Makefile.am  characteristics.m4  exports.m4  features.m4  headers.m4  libraries.m4  message.m4  output.m4  programs.m4  settings.m4
scripts/: README.md  build.bat  make_all.bat  make_crx.bat  make_crx.py  make_xpi.bat  make_xpi.py  readme.md
src/: Makefile.am
src/colony_npapi/: Info.plist  Makefile.am  ReadMe.txt  _config.h  _config_win32.h  colony_npapi.c  colony_npapi.h  colony_npapi.pch  colony_npapi.rc  dllmain.c  resource.h  setup.py  stdafx.c  stdafx.h
src/colony_npapi/descriptors/: install.rdf  manifest.json  manifest_u.json
src/colony_npapi/encoding/: base_64.c  base_64.h  encoding.h
src/colony_npapi/global/: compilation.h  compiler.h  cpu.h  definitions.h  memory.h  platforms.h  resource.h  targetver.h  types.h
src/colony_npapi/npapi/: npapi.h
src/colony_npapi/plugin/: base.c  base.h  plugin.h  python.c  python.h  util.c  util.h
src/colony_npapi/print/: print.h  print_unix.c  print_unix.h  print_win32.c  print_win32.h
src/colony_npapi/resources/: colony_npapi.rc
src/colony_npapi/resources/win32/vs2008ex/: colony_npapi.def  colony_npapi.rc
src/colony_npapi/system/: gui_unix.c  gui_unix.h  gui_win32.c  gui_win32.h  system.h
src/colony_npapi_python/: Makefile.am  ReadMe.txt  main.c  main.h  stdafx.c  stdafx.h  targetver.h
src/colony_npapi_test/: ReadMe.txt  main.c  stdafx.c  stdafx.h
src/python/npcolony_py/test/: global.py
win32/vs2008ex/: colony_npapi.sln  colony_npapi.vcproj  colony_npapi_python.vcproj  colony_npapi_test.vcproj
